<resources>
    <string name="app_name">AI Hub</string>
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Focused Owl!</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="chat_gpt">Chat GPT</string>
    <string name="chat_gpt_img_desc">icon image of Chat GPT</string>
    <string name="chat_gpt_desc">AI technology that allows you to have human-like conversations to get tasks done and much more with the chatbot.</string>
    <string name="bard">Google Bard</string>
    <string name="bard_img_desc">icon image of Bard AI tool</string>
    <string name="bard_desc">Google\'s AI is trained to be informative and comprehensive. It can generate human-like text in response to a wide range of prompts.</string>
    <string name="bingai">Bing AI</string>
    <string name="bingai_img_desc">icon image of Bing AI</string>
    <string name="bingai_desc">Based on the GPT-4 model, it is capable of turning data into accurate answers. It can only be accessed through Bing Browser.</string>
    <string name="dalle2">DALL-E 2</string>
    <string name="dalle2_img_desc">icon image of DALL-E 2 AI Tool</string>
    <string name="dalle2_desc">Deep Learning model developed by OpenAI to generate digital images from natural language descriptions.</string>
    <string name="caktus">Caktus AI</string>
    <string name="caktus_img_desc">icon image of Caktus AI tool</string>
    <string name="caktus_desc">AI writing tool designed specifically for students, offering features such as writing code, essays, paragraphs, and even maths.</string>
    <string name="jasper">Jasper AI</string>
    <string name="jasper_img_desc">icon image of Jasper AI tool</string>
    <string name="jasper_desc">Instantly Generate High Quality Copy For Emails, Ads, Websites, Listings, Blogs &amp; More. Saves your time and money.</string>
    <string name="jenni_img_desc">icon image of Jenni AI</string>
    <string name="jenni_ai">Jenni AI</string>
    <string name="jenni_desc">Jenni AI is a personal writing assistant that will make sure you never face the writer\'s block while writing a research or blog.</string>
    <string name="paperpal_img_desc">icon image of PaperPal</string>
    <string name="paperpal">Paperpal</string>
    <string name="paperpal_desc">An editor to help you polish your academic writing, it has a MS Word plugin so you can edit within MS Word.</string>
    <string name="scholarcy_img_desc">an icon image of Scholarcy AI</string>
    <string name="scholarcy">Scholarcy</string>
    <string name="scholarcy_desc">A personal reading assistant that creates summaries of research papers with unfamiliar terms hyperlinked to Wikipedia.</string>
    <string name="chatpdf_img_desc">icon image of ChatPDF AI</string>
    <string name="chatpdf">ChatPDF</string>
    <string name="chatpdf_desc">It is ChatGPT for research papers, just upload a paper and start asking it questions regarding the paper.</string>
    <string name="sheetplus_img_desc">icon image of sheetplus AI</string>
    <string name="sheet_plus">Sheet Plus</string>
    <string name="sheetplus_desc">Simply describe the formula or logic and see Sheet+ create it for you. This one is definitely not to missed if you use spreadsheets.</string>
    <string name="simplified_img_desc">icon image of Simplified AI tool</string>
    <string name="simplified">Simplified</string>
    <string name="simplified_desc">It is an AI swiss knife! It has an image editor, video creator, AI copywriter and social media management!</string>
    <string name="ocoya_img_desc">icon image of Ocoya AI tool</string>
    <string name="ocoya">Ocoya</string>
    <string name="ocoya_desc">Ocoya helps create and schedule content on social media, it also has an AI copywriter to write amazing captions.</string>
    <string name="polarr_img_desc">icon image of Polarr AI tool</string>
    <string name="polarr_ai">Polarr Copilot</string>
    <string name="polarr_desc">This incredible tool transforms text into photos, videos and designs which can be edited to your preference.</string>
    <string name="seogpt_img_desc">icon image of SEO GPT tool</string>
    <string name="seo_gpt">SEO GPT</string>
    <string name="seogpt_desc">This incredible tool helps write keyword optimized content that can bypass AI-content detectors and its 100% Free!</string>
    <string name="krisp_img_desc">icon image of Krisp AI tool</string>
    <string name="krisp">Krisp</string>
    <string name="krisp_desc">Touted as the World\'s No.1 app for noise cancellation on online meetings, Krisp improves voice clarity, removes echo, takes notes.</string>
    <string name="runway_img_desc">icon image of Runway AI tool</string>
    <string name="runway">Runway ML</string>
    <string name="runway_desc">This is ChatGPT for visual content including images and videos. Type your prompt and create videos in minutes.</string>
    <string name="looka_img_desc">icon image of Looka AI tool</string>
    <string name="looka">Looka</string>
    <string name="looka_desc">AI-powered platform to design Branding Kit! It gives a logo, business card, letter head and all the branding essentials.</string>
    <string name="lumen5_img_desc">icon image of Lumen5 AI tool</string>
    <string name="lumen5">Lumen5</string>
    <string name="lumen5_desc">Lumen5 can read your blog, convert it into a summary and create a video which you can edit to fit your style.</string>
    <string name="spiritme_img_desc">icon image of SpiritMe AI tool</string>
    <string name="spiritme">SpiritMe</string>
    <string name="spiritme_desc">Type any text and upload your pic. It converts your text into a video where you\'re speaking in your voice and emotions.</string>
    <string name="invideo_img_desc">icon image of InVideo AI tool</string>
    <string name="invideo">InVideo</string>
    <string name="invideo_desc">It can generate scripts from text prompts and convert them into natural sounding voiceover videos.</string>
    <string name="murf_img_desc">icon image of Murf AI tool</string>
    <string name="murf_ai">Murf AI</string>
    <string name="murf_desc">Murf helps make life-like studio-quality voice overs in just minutes for podcasts, videos and wherever audio is needed.</string>
    <string name="speechify_img_desc">icon image of Speechify AI tool</string>
    <string name="speechify">Speechify</string>
    <string name="speechify_desc">Known as the World\'s No. 1 AI voiceover generator, Speechify creates voiceover for videos, podcasts, presentations etc.</string>
    <string name="image_of_an_owl">image of an owl</string>
    <string name="tab0">Learn! &#128293;</string>
    <string name="tab1">Popular</string>
    <string name="tab2">Academic</string>
    <string name="tab3">Productivity</string>
    <string name="tab4">Creativity</string>
    <string name="tab5">SEO Tools</string>
    <string name="tab6">Research Work Tools</string>
    <string name="tab7">Automation and Scheduling</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="coming_soon_desc">This feature will be added in the next update.</string>
</resources>